# 2600_Forensic_Tool

./: .flake8  .gitignore  .isort.cfg  .oldflaker  .pre-commit-config.yaml  LICENSE  NOTES.md  Readme.md  get_poetry.sh  mkdocs.yml  poetry.toml  pyproject.toml  test.sh
configs/: $Boot.yaml  $LogFile.yaml  $MFTMirr.yaml  Chrome.yaml  ChromeFileSystem.yaml  Edge.yaml  EdgeChromum.yaml  EdgeFileSystem.yaml  EventLogs.yaml  InternetExplorer.yaml  LogFiles.yaml  RegistryHiveSystem.yaml  RegistryHiveUser.yaml
docs/: About Targets.md  About this documentation.md  Basic Usage.md  Installation.md  License.md  index.md
docs/src/: pyfiles.txt
docs/src/fouine/: fouine.md
docs/src/fouine/core/: _helper.md  core.md  logs.md  parsing.md
fouine/: fouine.py
installer_poetry/: poetry_install.sh  poetry_uninstall.sh
site/: 404.html  index.html  search.html
site/search/: search_index.json
site/src/fouine/: fouine.py
site/src/fouine/core/: _defcfg.py  _helper.py  console.py  core.py  logs.py  parsing.py
src/fouine/: fouine.py
src/fouine/core/: _defcfg.py  _helper.py  console.py  core.py  logs.py  parsing.py  tsk3_helper.py
src/fouine/core/_FOUINE_EXPORTS/: HKEY_LOCAL_MACHINE_SAM  HKEY_USERS_DEFAULT  HKEY_USERS_NT
