###############################################################################
                                  # PROJECT #
###############################################################################

[project]
requires_python = ">3.10"

###############################################################################
                                  # POETRY #
###############################################################################

[tool.poetry]
name = "fouine"
version = "0.1.0"
description = ""
authors = ["you"]
license = "MIT"
readme = "Readme.md"

##########################
######## DEPENDENCIES
##########################
###

[tool.poetry.dependencies]
python = "^3.10"

###

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
isort = "^5.12.0"

###

[tool.poetry.group.bigdev]
optional = true
[tool.poetry.group.bigdev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

###

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"


##########################
######## SCRIPTS
##########################
###

[tool.poetry.scripts]
fouine = 'fouine.fouine:main'

###############################################################################
                                  # BLACK #
###############################################################################

[tool.black]
target-version = ['py310']
line-length = 88
include = 'fouine/'

###############################################################################
                                  # ISORT #
###############################################################################

[tool.isort]
verbose = 'True'
profile = 'black'
py_version = '310'
group_by_package = 'True'
skip_gitignore = 'True'
known_third_party = []

###############################################################################
                                  # BUILD #
###############################################################################

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

