###############################################################################
                                  # PROJECT #
###############################################################################

[project]
requires_python = ">3.10"

###############################################################################
                                  # POETRY #
###############################################################################

[tool.poetry]
name = "fouine"
version = "0.1.0"
description = ""
authors = ["you"]
license = "MIT"
readme = "Readme.md"

##########################
######## DEPENDENCIES
##########################
###

[tool.poetry.dependencies]
python = "^3.10"

###

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.1.1"
pytest = "^7.2.2"

###
flakeheaven = "^3.2.1"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.2"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"


##########################
######## SCRIPTS
##########################
###

[tool.poetry.scripts]
fouine = 'fouine.fouine:main'

###############################################################################
                                  # BLACK #
###############################################################################

[tool.black]
target-version = ['py310']
verbose = 'False'
line-length = 88
include = 'src/'

###############################################################################
                                  # FLAKEHEAVEN #
###############################################################################
[tool.flakeheaven]
base = ["https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"]
format= "colored"
show_source = true
exlude = ["*.py[cod]"]
max-line-length = 88
max-complexity = 18

[tool.flakeheaven.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
mccabe = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*", "-Q000"]
#select = "B,C,E,F,W,T4,B9"
#extend-ignore = "E203"

###############################################################################
                                  # ISORT #
###############################################################################

[tool.isort]
verbose = 'True'
profile = 'black'
py_version = '310'
known_third_party = []
group_by_package = 'True'
skip_gitignore = 'True'
combine_as_imports = 'True'

###############################################################################
                                  # MYPY #
###############################################################################

[tool.mypy]
python_version = "3.10"

#3rd party import
ignore_missing_imports =		true

# Dynamic Typing
disallow_any_unimported =		true
disallow_any_expr =				false
disallow_any_decorated =		false
disallow_any_explicit =			true
disallow_any_generics =			false
disallow_subclassing_any =		true

# Untyped
dissalow_untyped_defs =			true
dissalow_untyped_decorators =	true
dissalow_untyped_calls =		true
dissalow_incomplete_defs =		true

# None and Optional
no_implicit_optional =			true

# Warnings
warn_return_any =				false
warn_unreachable=				true

# Misc
pretty =						true

###############################################################################
                                  # MYPY #
###############################################################################
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.


###############################################################################
                                  # BUILD #
###############################################################################

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

